first page added

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Developer T</title>
+  </head>
+  <body>
+    <section class="top-banner banner">
+      <div class="half-width">
+        <h1>
+          Welcome to <br />
+          <span class="name-highlight">Peter Parker</span> World
+        </h1>
+        <h3>World-class professional web developer</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique,
+          sit deserunt optio eaque non vero asperiores doloremque mollitia
+          dignissimos qui, impedit, architecto veniam fugiat ipsam at iure ex
+          fugit reprehenderit!
+        </p>
+        <a class="link-btn" target="_blank" href="hire.html">Hire me</a>
+      </div>
+      <div class="half-width">
+        <img src="images/jhankar.png" alt="" />
+      </div>
+    </section>
+    <section class="banner">
+      <div class="half-width">
+        <img src="images/jhankar2.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1>
+          Dream Big
+        </h1>
+        <h3>Become a web developer</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique,
+          sit deserunt optio eaque non vero asperiores doloremque mollitia
+          dignissimos qui
+        </p>
+        <a class="link-btn" target="_blank" href="hire.html">Download Resume</a>
+      </div>
+    </section>
+  </body>
 </html>
