--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="images/jhankar.png" alt="" />
       </div>
     </section>
-    <section class="banner">
+    <section class="banner bottom-banner">
       <div class="half-width">
         <img src="images/jhankar2.png" alt="" />
       </div>
