your half boiled egg is ready

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       </div>
     </section>
     <section class="banner bottom-banner">
+      <div class="bottom-image">
+        <img src="images/dream-bg.png" alt="">
+      </div>
       <div class="half-width">
         <img src="images/jhankar2.png" alt="" />
       </div>
