--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="half-width">
         <h1>
           Welcome to <br />
-          <span class="name-highlight">Peter Parker</span> World
+          <span class="orange-highlight">Peter Parker</span> World
         </h1>
         <h3>World-class professional web developer</h3>
         <p>
@@ -47,5 +47,22 @@
         <a class="link-btn" target="_blank" href="hire.html">Download Resume</a>
       </div>
     </section>
+
+    <section class="experience-area">
+      <h2 class='exp'>Experience</h2>
+      <div class="half-width exp-i">
+        <h2>Full Stack web dev</h2>
+        <h3 class='orange-highlight'>2021- Pressent | Pro level web developer</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quibusdam fuga nobis, et sequi minima libero magni dolore dignissimos? Maiores vitae amet accusamus natus repellat quis voluptatum, quasi quos illum?</p>
+      </div>
+      <div class="half-width exp-i">
+        <h2>Junior web developer</h2>
+        <h3 class='orange-highlight'>2020-2021 | Programming Hero Learner</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui cum architecto beatae eum molestias, perspiciatis laborum odit dolore ad cupiditate? Vero quam non ea veritatis a, minus, mollitia vitae aut </p>
+      </div>
+    </section>
+    <footer>
+      <p>© T 2021, all rights reserved.</p>
+    </footer>
   </body>
 </html>
